Update indexad17.html allowed

--- a/anannniyaa.couponcorners.com/indexad17.html
+++ b/anannniyaa.couponcorners.com/indexad17.html
@@ -170,7 +170,7 @@
 
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
-            console.log('Right-click is blocked');
+            console.log('Right-click is allowed');
         });
     </script>
 </body>
