--- a/anannniyaa.couponcorners.com/indexad17.html
+++ b/anannniyaa.couponcorners.com/indexad17.html
@@ -21,13 +21,13 @@
 <body>
     <header>
 
-        <div class="logo"><a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
+        <div class="logo"><a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav>
             <ul>
-                <li><a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6">Home</a></li>
-                <li><a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6">About</a></li>
-                <li><a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6">Contact</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">Home</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">About</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -47,27 +47,27 @@
         </span>
         <div class="owl-carousel owl-theme">
 
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/1.jpg">
                 </div>
             </a>
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/2.jpg">
                 </div>
             </a>
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/3.jpg">
                 </div>
             </a>
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/4.jpg">
                 </div>
             </a>
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/5.jpg">
                 </div>
             </a>
-            <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/6.jpg">
                 </div>
             </a>
@@ -81,32 +81,32 @@
                     <h3>Click on their image to watch them do the unspeakable.</h3>
                 </span>
                 <div class="ClientsType">
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft TextCenter">
                             <img src="adsterrapic/1.jpg">
                         </div>
                     </a>
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/2.jpg">
                         </div>
                     </a>
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/3.jpg">
                         </div>
                     </a>
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/4.jpg">
                         </div>
                     </a>
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/5.jpg">
                         </div>
                     </a>
-                    <a href="https://alleviatedesignertheir.com/gfbzutgt?key=e27b794d98c52e1c095215ba757f6ab6" target="_blank" rel="noopener noreferrer">
+                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/7.jpg">
                         </div>
@@ -170,7 +170,7 @@
 
         document.addEventListener('contextmenu', function (e) {
             e.preventDefault();
-            console.log('Right-click is allowed');
+            console.log('Right-click is blocked');
         });
     </script>
 </body>
