--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="anannniyaa.couponcorners.com/indexad17.html">
+					<A HREF="https://dailytrends1.github.io/hotty/">
 						Click Here To Watch
 					</A>		
 			</TD>
@@ -117,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=anannniyaa.couponcorners.com/indexad17.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=https://dailytrends1.github.io/hotty/">
 
 
 <!-- ==================== Start epilogue ==================== -->
