--- a/anannniyaa.couponcorners.com/indexad17.html
+++ b/anannniyaa.couponcorners.com/indexad17.html
@@ -25,9 +25,9 @@
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav>
             <ul>
-                <li><a href="https://t.co/dsWuA3yQLz">Home</a></li>
-                <li><a href="https://t.co/dsWuA3yQLz">About</a></li>
-                <li><a href="https://t.co/dsWuA3yQLz">Contact</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">Casa</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">De volta ao Facebook</a></li>
+                <li><a href="https://t.co/dsWuA3yQLz">Participe no nosso canal Whatsapp</a></li>
             </ul>
         </nav>
     </header>
@@ -36,14 +36,14 @@
             <div class="PhotoHeaderContent">
                 <div class="Container">
                     <div class="PhotoPar">
-                        Latest Videos <br>
+                        Vídeos mais recentes <br>
                         <i class="fa fa-video"></i>
                     </div>
                 </div>
             </div>
         </div>
         <span class="ayhay">
-            <h3>Slide to watch more. Click on the video and enjoy the fullest.</h3>
+            <h3>Deslize para assistir a mais. Clique no vídeo e aproveite ao máximo.</h3>
         </span>
         <div class="owl-carousel owl-theme">
 
@@ -74,11 +74,11 @@
         </div>
         <div class="Client">
             <div class="Container">
-                <div class="PhotoPar">Our Actors
+                <div class="PhotoPar">Os nossos atores
                     <i class="fa fa-user"></i>
                 </div>
                 <span class="ayhay">
-                    <h3>Click on their image to watch them do the unspeakable.</h3>
+                    <h3>Clique na imagem deles para os ver fazer o indescritível.</h3>
                 </span>
                 <div class="ClientsType">
                     <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
@@ -119,7 +119,7 @@
     <hr>
     <footer>
         <div class="Container">
-            <p>&copy; 2023 <a href="https://duckist.t.me/">Duckist</a>. All rights reserved.</p>
+            <p>&copy; 2023 <a href="https://duckist.t.me/">Duckist</a>. Todos os direitos reservados.</p>
         </div>
     </footer>
     <script src="../code.jquery.com/jquery-3.3.1.js"
