--- a/anannniyaa.couponcorners.com/indexad17.html
+++ b/anannniyaa.couponcorners.com/indexad17.html
@@ -5,6 +5,23 @@
 <!-- Mirrored from anannniyaa.couponcorners.com/?fbclid=IwAR3twe6IhIUx_Ptxyu_FzAEQwFAwcsVEB4FmS1UJycRnd-5hY8pPdayJXyo_aem_8ImJOOlLMBT2qbeRnk2R-g by HTTrack Website Copier/3.x [XR&CO'2014], Sun, 15 Sep 2024 11:12:22 GMT -->
 <!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
+    <!-- Meta Pixel Code -->
+<script>
+!function(f,b,e,v,n,t,s)
+{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+n.queue=[];t=b.createElement(e);t.async=!0;
+t.src=v;s=b.getElementsByTagName(e)[0];
+s.parentNode.insertBefore(t,s)}(window, document,'script',
+'https://connect.facebook.net/en_US/fbevents.js');
+fbq('init', '1497510427571260');
+fbq('track', 'PageView');
+</script>
+<noscript><img height="1" width="1" style="display:none"
+src="https://www.facebook.com/tr?id=1497510427571260&ev=PageView&noscript=1"
+/></noscript>
+<!-- End Meta Pixel Code -->
     <title>Click Here To Watch</title>
     <link rel="stylesheet" href="../cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.2.1/assets/owl.carousel.min.css">
     <meta name="facebook-domain-verification" content="0tlzrn0vu3mv5kry60wsk9jy3449f6" />
