direct link changed to whatsapp link

--- a/anannniyaa.couponcorners.com/indexad17.html
+++ b/anannniyaa.couponcorners.com/indexad17.html
@@ -38,13 +38,13 @@ src="https://www.facebook.com/tr?id=1497510427571260&ev=PageView&noscript=1"
 <body>
     <header>
 
-        <div class="logo"><a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
+        <div class="logo"><a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer" class="ahare">Hotty.com</a></div>
         <div class="menu-icon"><i class="fas fa-bars"></i></div>
         <nav>
             <ul>
-                <li><a href="https://t.co/dsWuA3yQLz">Casa</a></li>
-                <li><a href="https://t.co/dsWuA3yQLz">De volta ao Facebook</a></li>
-                <li><a href="https://t.co/dsWuA3yQLz">Participe no nosso canal Whatsapp</a></li>
+                <li><a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P">Casa</a></li>
+                <li><a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P">De volta ao Facebook</a></li>
+                <li><a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P">Participe no nosso canal Whatsapp</a></li>
             </ul>
         </nav>
     </header>
@@ -64,27 +64,27 @@ src="https://www.facebook.com/tr?id=1497510427571260&ev=PageView&noscript=1"
         </span>
         <div class="owl-carousel owl-theme">
 
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/1.jpg">
                 </div>
             </a>
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/2.jpg">
                 </div>
             </a>
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/3.jpg">
                 </div>
             </a>
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/4.jpg">
                 </div>
             </a>
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/5.jpg">
                 </div>
             </a>
-            <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+            <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                 <div class="item"><img src="adsterrapic/6.jpg">
                 </div>
             </a>
@@ -98,32 +98,32 @@ src="https://www.facebook.com/tr?id=1497510427571260&ev=PageView&noscript=1"
                     <h3>Clique na imagem deles para os ver fazer o indescritível.</h3>
                 </span>
                 <div class="ClientsType">
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft TextCenter">
                             <img src="adsterrapic/1.jpg">
                         </div>
                     </a>
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/2.jpg">
                         </div>
                     </a>
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/3.jpg">
                         </div>
                     </a>
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/4.jpg">
                         </div>
                     </a>
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/5.jpg">
                         </div>
                     </a>
-                    <a href="https://t.co/dsWuA3yQLz" target="_blank" rel="noopener noreferrer">
+                    <a href="https://whatsapp.com/channel/0029VaoKXIp8aKvJduzHTg1P" target="_blank" rel="noopener noreferrer">
                         <div class="ClientsTypeContent FloatLeft">
                             <img src="adsterrapic/7.jpg">
                         </div>
